# AUTOSCALING-ANALYSIS

./: .gitignore  Makefile  README.md  lenh_chay.md  pyproject.toml  requirements.txt
configs/: config.yaml
notebooks/: auto_scaling.ipynb
scripts/: benchmark.py  features.py  preprocess.py  run_ui.sh  simulate_scaling.py  train.py
src/autoscaling_analysis/: __init__.py  cli.py  config.py
src/autoscaling_analysis/benchmark/: __init__.py  build_benchmark.py
src/autoscaling_analysis/eda/: __init__.py  eda_report.py  plots.py
src/autoscaling_analysis/features/: __init__.py  make_features.py  segments.py  transforms.py
src/autoscaling_analysis/ingest/: __init__.py  parse_logs.py  schemas.py
src/autoscaling_analysis/models/: __init__.py  metrics.py  seasonal_naive.py  xgb_model.py
src/autoscaling_analysis/scaling/: __init__.py  anomaly.py  latency.py  policy.py  simulate.py
src/autoscaling_analysis/tests/: test_capacity_key_normalize.py  test_feature_leakage.py  test_parse_regex.py  test_required_instances.py
src/autoscaling_analysis/timeseries/: __init__.py  build_ts3.py  gaps.py
src/autoscaling_analysis/ui/: __init__.py  streamlit_app.py
